* Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.2.0-0
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.0-0
- Update Hiera 4 to Hiera 5

* Fri Jul 13 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.4-0
- Tested against Puppet 5 and Oracle Linux

* Thu Jul 12 2018 Trey Dockendorf <tdockendorf@osc.edu> - 6.1.3-0
- Add `aide::cron_command` to allow user modification.
- Ensure that the package is explicitly installed before any dependent
  resources.

* Tue Jun 26 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.3-0
- Update version range of auditd dependency in metadata.json

* Thu Nov 30 2017 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.1.2-0
- Update README.md from puppet strings

* Thu Oct 26 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Retain output database upon AIDE database update for SCAP
  Security Guide OVAL check
  xccdf_org.ssgproject.content_rule_aide_build_database

* Tue Sep 05 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Fixed bug whereby aide reports/errors were not being sent to syslog.
  AIDE can now be configured to report to syslog, itself.
- Use FIPS-appropriate hash algorithms when in FIPS mode
- No longer hide AIDE initialization failures (which are primarily
  configuration errors) when a manifest with the aide class is applied.
- Improved acceptance tests.
- Commented out SUSE acceptance test node, as the node configuration
  is broken.

* Wed Apr 19 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.1-0
- Updated logrotate to use new lastaction API
- Confine puppet version in metadata.json

* Wed Jan 25 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Updated calls to aide::rule and auditd::rule

* Tue Dec 13 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Strong typed the module.
